# Hyprland-Dots-TUI-Installer

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: dev-check.yml  release.yml
scripts/: test_pipeline.sh
src/dots_tui/: __init__.py  __main__.py  app.py  utils.py
src/dots_tui/logic/: __init__.py  backup.py  copy_ops.py  dedupe.py  env_probe.py  models.py  orchestrator.py  path_safety.py  plan.py  restore.py  system.py
src/dots_tui/screens/: config.py  confirm.py  input.py  menu.py  progress.py
tests/: __init__.py  conftest.py  helpers.py  test_config_screen.py  test_confirm_screen.py  test_dry_run_plan_mode.py  test_dry_run_sandbox.py  test_edge_cases.py  test_input_modal.py  test_legacy_backup_discovery.py  test_main.py  test_migration_copysh_to_tui.py  test_parity_express.py  test_parity_ghostty_backup.py  test_parity_harness_smoke.py  test_parity_keybinds_layout_init.py  test_parity_optional_app_configs.py  test_parity_rofi_dummy_theme.py  test_parity_upgrade.py  test_parity_waybar_symlinks.py  test_parity_waybar_weather.py  test_path_safety.py  test_progress_screen.py  test_repo_root_detection.py  test_restore.py  test_runtime_repo_bootstrap.py  test_ui_screens.py
