# ============================================================================
#  KoolDots TUI Installer (2026)
#  Project URL: https://github.com/LinuxBeginnings/Hyprland-Dots-TUI-Installer
#  License: GNU GPLv3
#  SPDX-License-Identifier: GPL-3.0-or-later
# ============================================================================
[project]
name = "dots-tui"
version = "0.2.1"
description = "Textual TUI installer for Hyprland-Dots"
requires-python = ">=3.11"
dependencies = ["rich-argparse>=1.7.2", "textual>=0.50.0"]

[project.scripts]
dots-tui = "dots_tui.__main__:main"

[dependency-groups]
dev = [
  "basedpyright>=1.24.0",
  "pyinstaller>=6.0.0",
  "ruff>=0.14.13",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "textual-dev>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dots_tui"]

[tool.hatch.build.targets.sdist]
exclude = [
  "Hyprland-Dots/config/rofi/.current_wallpaper",
  "Hyprland-Dots/config/waybar/config",
  "Hyprland-Dots/config/waybar/style.css",
]

[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["**/__pycache__", "**/.venv", "build", "dist"]
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
